argo-rollouts/assets/00.global-components/00.argo-rollouts-dashboard-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-dashboard
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: argo-rollouts-dashboard
              servicePort: 3100
