argo-rollouts/assets/00.global-components/00.ingresses-rollout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /stable/(.*)
        pathType: Prefix
        backend:
          service:
            name: rollouts-demo-stable
            port:
             number: 8080

---
# note: separating the two ingress is needed if you want to do some traffic control.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-demo-preview
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /preview/(.*)
        pathType: Prefix
        backend:
          service:
            name: rollouts-demo-preview
            port:
              number: 8080
